--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -18,6 +18,7 @@ const { title, description, image, type = 'website', structuredData, noindex = f
       async
       defer
     ></script>
+    <script src="/js/scroll-reveal.js" defer></script>
   </head>
   <body>
     <Header />
